--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,26 @@
         </dependency>
 
 
+        <!--1. 添加短信平台的依赖包(注意:存在相关依赖就不加)-->
+        <!-- commons-logging  start -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging-api</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <!--httpclient支持-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
